--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     Kakao.Link.sendDefault({
       objectType: 'feed',
       content: {
-        title: '초청장',
-        description: '큰빛은혜교회 창립기념예배에 초대합니다',
+        title: '큰빛은혜교회 창립감사예배 초청장',
+        description: '사랑하고 축복합니다 큰빛은혜교회입니다!',
         imageUrl:
-          'file:///C:/Users/ynghy/OneDrive/Desktop/%EB%A0%88%EC%A7%80%EC%8A%A4%ED%8A%B8%EB%A0%88%EC%9D%B4%EC%85%98/Album%20Archive.html',
+          'https://yt3.ggpht.com/rF7-pIqRKasPBU9-hyJ_l8eeIJxhsPzYzfao9NKc0O-diXQZAyfzw6L-UJCMAmwvqLVP2DPpb-o=s900-c-k-c0x00ffffff-no-rj',
         link: {
           mobileWebUrl: 'https://www.bafg-invitation.com/',
           webUrl: 'https://www.bafg-invitation.com/',
