--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       objectType: 'feed',
       content: {
         title: '큰빛은혜교회 창립감사예배 초청장',
-        description: '사랑하고 축복합니다 큰빛은혜교회입니다!',
+        description: '사랑하고 축복합니다 큰빛은혜교회입니다',
         imageUrl:
           'https://skim0805.github.io/-/초청장.jpg',
         link: {
