--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       objectType: 'feed',
       content: {
         title: '큰빛은혜교회 창립감사예배 초청장',
-        description: '사랑하고 축복합니다 큰빛은혜교회입니다',
+        description: '아래 링크를 통해 초청장을 확인하세요',
         imageUrl:
-          'https://skim0805.github.io/-/초청장.jpg',
+          'https://skim0805.github.io/-/초청장_Square.jpg',
         link: {
           mobileWebUrl: 'https://www.bafg-invitation.com/',
           webUrl: 'https://www.bafg-invitation.com/',
